feat: add rich text editor component and improve style

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,11 +17,16 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "jodit": "^4.6.1",
+    "jodit-react": "^5.2.18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "suneditor": "^2.47.5",
+    "suneditor-react": "^3.6.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
