--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,21 +5,33 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@hookform/resolvers": "^5.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^7.0.2",
+    "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^7.29.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.1",
+    "dayjs": "^1.11.13",
+    "jodit": "^4.6.1",
+    "jodit-react": "^5.2.18",
     "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "katex": "^0.16.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
-    "uuid": "^11.1.0",
+    "suneditor": "^2.47.5",
+    "suneditor-react": "^3.6.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
