--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.13",
     "jodit": "^4.6.1",
     "jodit-react": "^5.2.18",
+    "jwt-decode": "^4.0.0",
     "katex": "^0.16.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
