--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,6 +30,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1",
     "web-vitals": "^2.1.4",
