--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.0.1",
     "@mui/x-charts": "^8.11.1",
     "@mui/x-date-pickers": "^7.28.2",
+    "@tanstack/react-query": "^5.89.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
