--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.1",
+    "codemirror": "^5.65.20",
     "dayjs": "^1.11.13",
     "jodit": "^4.6.1",
     "jodit-react": "^5.2.18",
